update getting started guide

--- a/app/views/docs/getting-started-for-flutter.phtml
+++ b/app/views/docs/getting-started-for-flutter.phtml
@@ -155,6 +155,7 @@ Account account = Account(client);
 
 Response user = await account
     .create(
+        userId: '[USER_ID]',
         email: 'me@appwrite.io',
         password: 'password',
         name: 'My Name'
@@ -197,6 +198,7 @@ Account account = Account(client);
 
 Response user = await account
     .create(
+        userId: '[USER_ID]',
         email: 'me@appwrite.io',
         password: 'password',
         name: 'My Name'
