--- a/app/views/docs/getting-started-for-server.phtml
+++ b/app/views/docs/getting-started-for-server.phtml
@@ -86,7 +86,7 @@ $swiftVersion = $versions['swift'] ?? '';
             <div class="ide margin-top-small" data-lang="swift" data-lang-label="Swift">
             <pre class="line-numbers"><code class="prism language-swift" data-prism>dependencies: [
     // ...
-    .package(url: "https://github.com/appwrite/sdk-for-swift.git", from: "?php $this->escape($swiftVersion); ?>")
+    .package(url: "https://github.com/appwrite/sdk-for-swift.git", from: "<?php $this->escape($swiftVersion); ?>")
     // ...
 ]</code></pre>
             </div>
