--- a/app/views/docs/storage.phtml
+++ b/app/views/docs/storage.phtml
@@ -78,6 +78,6 @@ As buckets are very similar to Collections we have in the database, here again, 
 </ul>
 
 
-<h2>Download, and streaming with range</h2>
+<h2>Downloading and streaming with range</h2>
 
 <p>Apart from previewing files and images, downloading is another important feature. With 0.13 we also support streamed download using the HTTP range header. If you are using our SDKs or console, nothing is different. Even if you want to download the whole file at once, even if you use the REST endpoint directly, there isn't any difference. However, if you want to get only a part of a file from storage, you can supply the range header and the server will respond with an appropriate chunk of the file.</p>
