feat: add missing query

--- a/app/views/docs/database.phtml
+++ b/app/views/docs/database.phtml
@@ -314,6 +314,10 @@ func main() {
             <td>Not equal to.</td>
         </tr>
         <tr>
+            <td>lesser</td>
+            <td>Lesser than.</td>
+        </tr>
+        <tr>
             <td>lesserEqual</td>
             <td>Less than or equal to.</td>
         </tr>
