--- a/app/views/docs/storage.phtml
+++ b/app/views/docs/storage.phtml
@@ -12,7 +12,7 @@
 
 <p>You can create your bucket from your Appwrite project's dashboard, using any of our server side SDKs or directly using our REST API authenticated using an API Key. In order to create a bucket from the dashboard, access your Storage from your project's left navigation panel. Click <b>Add Bucket</b> button and choose your bucket's name. For convenience, you can also set a custom ID for your bucket instead of auto-generated ID. This will create a new bucket and take you to its settings page, where you can configure various options for your bucket.</p>
 
-<p>In order to [create a bucket](https://appwrite.io/docs/server/storage?sdk=dart-default#storageCreateBucket) programmatically, you can either use any of our server side [SDKs](https://appwrite.io/docs/sdks#server) or REST API paired with an API Key. Let's look at a code sample using CURL, how we can create a bucket using our REST API.</p>
+<p>In order to <a href="/docs/server/storage?sdk=dart-default#storageCreateBucket">create bucket</a> programmatically, you can either use any of our server side <a href="/docs/sdks#server">SDKs</a> or REST API paired with an API Key. Let's look at a code sample using CURL, how we can create a bucket using our REST API.</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Create bucket">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>curl \
