--- a/app/views/docs/storage.phtml
+++ b/app/views/docs/storage.phtml
@@ -64,7 +64,7 @@ As buckets are very similar to Collections we have in the database, here again, 
     -X POST \
     -H "Content-Type: application/json" \
     -H "x-appwrite-project: YOUR_PROJECT_ID" \
-    -H "x-appwrite-key: YOUR_KEY_SECRET" \
+    -H "x-appwrite-key: YOUR_API_KEY" \
     -F "file=@/path/to/file.jpg" \
     -F "fileId=unique()" \
     https://YOUR_HOSTNAME/v1/storage/buckets/BUCKET_ID/files</code></pre>
