--- a/app/views/docs/storage.phtml
+++ b/app/views/docs/storage.phtml
@@ -97,7 +97,7 @@ As buckets are very similar to Collections we have in the database, here again, 
       'content-type': 'multipart/form-data',
       'content-range': contentRanges,
       'x-appwrite-project': 'YOUR_PROJECT_ID',
-      'x-appwrite-key': 'YOUR_KEY'
+      'x-appwrite-key': 'YOUR_API_KEY'
     };
     try {
       final res = await client.call(HttpMethod.post,
