--- a/app/views/docs/storage.phtml
+++ b/app/views/docs/storage.phtml
@@ -19,7 +19,7 @@
     -X POST \
     -H "Content-Type: application/json" \
     -H "x-appwrite-project: YOUR_PROJECT_ID" \
-    -H "x-appwrite-key: YOUR_KEY_SECRET" \
+    -H "x-appwrite-key: YOUR_API_KEY" \
     -d '{"name": "my-bucket", "bucketId": "my-bucket-id", "permission": "file"}' \
     https://YOUR_HOSTNAME/v1/storage/buckets</code></pre>
 </div>
